--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,14 @@ ikiwiki (1.43) UNRELEASED; urgency=low
   * Fix smiley plugin to support smileys at the very beginning or end of
     the content.
   * Allow multiple tag settings to appear in a single page.
+  * Many changes to make ikiwiki very resistant to write failures
+    including out of disk space situations. ikiwiki should never leave
+    truncated files, and if the error occurs during a web-based file edit,
+    the user will be given an opportunity to retry.
+    Inspired by the many ways Moin Moin destroys itself when out of disk. :-)
+  * Fix syslogging of errors.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 13 Feb 2007 22:40:56 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 14 Feb 2007 19:22:24 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
