* Patch from Ethan to allow using meta tags to set creation dates of pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ ikiwiki (1.43) UNRELEASED; urgency=low
     the user will be given an opportunity to retry.
     Inspired by the many ways Moin Moin destroys itself when out of disk. :-)
   * Fix syslogging of errors.
+  * Patch from Ethan to allow using meta tags to set creation dates of pages.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 14 Feb 2007 19:22:24 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 15 Feb 2007 00:44:29 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
