* Add a prettydate plugin that formats dates in a more readable fashion.   (I had to get a pretty date somehow today..)

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ ikiwiki (1.43) UNRELEASED; urgency=low
     Inspired by the many ways Moin Moin destroys itself when out of disk. :-)
   * Fix syslogging of errors.
   * Patch from Ethan to allow using meta tags to set creation dates of pages.
+  * Add a prettydate plugin that formats dates in a more readable fashion.
+    (I had to get a pretty date somehow today..)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 15 Feb 2007 00:44:29 -0500
 
