--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -12,6 +12,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.kitenet.net/%s.html"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
+* [[shortcut name=rfc url="http://www.faqs.org/rfcs/rfc%s.html"]]
 
 To add a new shortcut, use the "shortcut" preprocessor directive. "%s" is
 replaced with the text passed to the named shortcut. The optional desc
