--- a/doc/plugins/prettydate.mdwn
+++ b/doc/plugins/prettydate.mdwn
@@ -7,7 +7,7 @@ a format that is nice and easy to read.
 The names given to each of the hours in the day can be customised by
 setting the `timetable` configuration variable in ikiwiki's setup file.
 The default value of this configuration value can be seen near the top of
-`prettydate.pm`. Note that hours can be left blank, to make it display the
+`prettydate.pm`. Note that an hour can be left blank, to make it display the
 same as the hour before. Midnight, noon, and teatime are all hardcoded,
 since they do not occupy the whole hour.
 
