--- a/doc/plugins/prettydate.mdwn
+++ b/doc/plugins/prettydate.mdwn
@@ -2,7 +2,8 @@
 [[tag type/format]]
 
 Enabling this plugin changes the dates displayed on pages in the wiki to
-a format that is nice and easy to read.
+a format that is nice and easy to read. Examples: "in late evening on
+February 14th, 2007", "at noon on March 15th, 2007"
 
 The names given to each of the hours in the day can be customised by
 setting the `timetable` configuration variable in ikiwiki's setup file.
