--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -7,10 +7,9 @@ and instead uses a revision control system such as [[Subversion]].
 * [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
   It's the best way to find out when there's a new version to [[Download]].
 
-* See [[Features]] for a list of ikiwiki's features and [[plugins]] for information about its plugins. [[RoadMap]], [[TODO]]
-  and [[bugs]] might also be of interest. 
-
-* Feel free to post your questions and thoughts about ikiwiki to [[Discussion]].
+* Ikiwiki has a nice set of wiki [[features]] which can be expanded by
+  a large array of [[plugins]]. It also has some [[bugs]], a [[TODO]] list,
+  and a [[RoadMap]].
 
 [[template id=note text="""
 If you use ikiwiki, please list your wiki in [[IkiWikiUsers]].
@@ -20,6 +19,8 @@ Thanks! --[[Joey]]
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
   the parameters and usage of the ikiwiki program. There are some
   [[examples]] of things you can do with ikiwiki.
+
+* Feel free to post your questions and thoughts about ikiwiki to [[Discussion]].
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
