web commit by JoshTriplett: Add shortcut for c2: the Portland Pattern Repository, aka Ward's Wiki.  (Should possibly use a different shortcut than "c2".)

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -13,6 +13,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=iki url="http://ikiwiki.kitenet.net/%s.html"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 * [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt"]]
+* [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
 
 To add a new shortcut, use the "shortcut" preprocessor directive. "%s" is
 replaced with the text passed to the named shortcut. The optional desc
