--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -1,7 +1,7 @@
 This page controls what shortcut links the wiki supports.
 
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
-* [[shortcut name=map url="http://maps.google.com/maps?q=%s"]]
+* [[shortcut name=gmap url="http://maps.google.com/maps?q=%s"]]
 * [[shortcut name=wikipedia url="http://en.wikipedia.org/wiki/%s"]]
 * [[shortcut name=debbug url="http://bugs.debian.org/%s" desc="bug #%s"]]
 * [[shortcut name=deblist url="http://lists.debian.org/debian-%s" desc="debian-%s@lists.debian.org"]]
