--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -29,4 +29,15 @@ Released 29 April 2006.
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
 
+2.0 will also be an opportunity to remove old backwards compiatbility
+features and make other changes to the default configuration. Some things
+I'm considering:
+
+* Makeng OpenID the default auth method.
+* Dropping GlobLists. However, they can lurk in preferences settings in wikis,
+  which may make getting rid of them hard, and it may be worth keeping them
+  so users can list pages without anding them together.
+* Making page/index.html be the default output filename, rather than page.html.
+* Enabling goodstuff by default?
+
 Estimated release date for 2.0: 29 April 2007.
