on relative pagespecs by default..

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -39,5 +39,7 @@ I'm considering:
   so users can list pages without anding them together.
 * Making page/index.html be the default output filename, rather than page.html.
 * Enabling goodstuff by default?
+* Possibly making PageSpecs match relative by default, rather than the current absolute
+  (see [[Discussion]])
 
 Estimated release date for 2.0: 29 April 2007.
