--- a/doc/tipjar.mdwn
+++ b/doc/tipjar.mdwn
@@ -5,7 +5,7 @@ choose.
 I'm also currently collecting money to register a better domain name for
 ikiwiki. While ikiwiki.net seems to already be parked, some others are
 available. I'd like to get at least enough to register it for 5 years
-upfront (30 euros).
+upfront (probably 60 euros).
 
 <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=joey%40kitenet%2enet&item_name=ikiwiki&no_shipping=1&cn=Comments%3f&tax=0&currency_code=USD&lc=US&bn=PP%2dDonationsBF&charset=UTF%2d8"><img src="https://www.paypal.com/en_US/i/btn/x-click-but04.gif" alt="dontate with PayPal" /></a>
 
