* Updated Czech translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,9 @@ ikiwiki (1.43) UNRELEASED; urgency=low
   * Patch from Ethan to allow using meta tags to set creation dates of pages.
   * Add a prettydate plugin that formats dates in a more readable fashion.
     (I had to get a pretty date somehow today..)
+  * Updated Czech translation.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 15 Feb 2007 00:44:29 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Feb 2007 14:02:32 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
