--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ikiwiki\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-15 15:01-0500\n"
-"PO-Revision-Date: 2007-01-07 11:59+0100\n"
+"PO-Revision-Date: 2007-02-17 12:07+0100\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr "Nastavení uloženo."
 #: ../IkiWiki/CGI.pm:330
 #, perl-format
 msgid "%s is not an editable page"
-msgstr ""
+msgstr "%s není editovatelná stránka"
 
 #: ../IkiWiki/CGI.pm:418 ../IkiWiki/Plugin/brokenlinks.pm:24
 #: ../IkiWiki/Plugin/inline.pm:164 ../IkiWiki/Plugin/opendiscussion.pm:17
@@ -51,7 +51,7 @@ msgstr "Jste vyhoštěni."
 
 #: ../IkiWiki/CGI.pm:681
 msgid "login failed, perhaps you need to turn on cookies?"
-msgstr ""
+msgstr "přihlášení selhalo; možná si musíte povolit cookies?"
 
 #: ../IkiWiki/Plugin/aggregate.pm:61
 #, perl-format
@@ -210,63 +210,63 @@ msgstr "polygen selhal"
 #. translators: %A- is the name of the previous day.
 #: ../IkiWiki/Plugin/prettydate.pm:15
 msgid "late %A- night"
-msgstr ""
+msgstr "%A- pozdě v noci"
 
 #: ../IkiWiki/Plugin/prettydate.pm:17
 msgid "in the wee hours of %A- night"
-msgstr ""
+msgstr "%A- pozdě v noci, spíše brzké ranní hodiny"
 
 #: ../IkiWiki/Plugin/prettydate.pm:20
 msgid "terribly early %A morning"
-msgstr ""
+msgstr "%A příšerně brzo ráno"
 
 #: ../IkiWiki/Plugin/prettydate.pm:22
 msgid "early %A morning"
-msgstr ""
+msgstr "%A brzo ráno"
 
 #: ../IkiWiki/Plugin/prettydate.pm:25
 msgid "in mid-morning %A"
-msgstr ""
+msgstr "%A dopoledne"
 
 #: ../IkiWiki/Plugin/prettydate.pm:26
 msgid "in late morning %A"
-msgstr ""
+msgstr "%A pozdě dopoledne"
 
 #: ../IkiWiki/Plugin/prettydate.pm:27
 msgid "at lunch time on %A"
-msgstr ""
+msgstr "%A kolem oběda"
 
 #: ../IkiWiki/Plugin/prettydate.pm:29
 msgid "%A afternoon"
-msgstr ""
+msgstr "%A odpoledne"
 
 #: ../IkiWiki/Plugin/prettydate.pm:32
 msgid "late %A afternoon"
-msgstr ""
+msgstr "%A pozdě odpoledne"
 
 #: ../IkiWiki/Plugin/prettydate.pm:33
 msgid "%A evening"
-msgstr ""
+msgstr "%A večer"
 
 #: ../IkiWiki/Plugin/prettydate.pm:35
 msgid "late %A evening"
-msgstr ""
+msgstr "%A pozdě večer"
 
 #: ../IkiWiki/Plugin/prettydate.pm:37
 msgid "%A night"
-msgstr ""
+msgstr "%A v noci"
 
 #: ../IkiWiki/Plugin/prettydate.pm:74
 msgid "at teatime on %A"
-msgstr ""
+msgstr "%A během odpoledního čaje"
 
 #: ../IkiWiki/Plugin/prettydate.pm:78
 msgid "at midnight"
-msgstr ""
+msgstr "o půlnoci"
 
 #: ../IkiWiki/Plugin/prettydate.pm:81
 msgid "at noon on %A"
-msgstr ""
+msgstr "%A o poledni"
 
 #: ../IkiWiki/Plugin/search.pm:34
 #, perl-format
@@ -289,9 +289,9 @@ msgstr "zkratka postrádá jméno nebo url"
 #. translators: First parameter is the name of the shortcut, the second
 #. translators: is an URL.
 #: ../IkiWiki/Plugin/shortcut.pm:33
-#, fuzzy, perl-format
+#, perl-format
 msgid "shortcut %s points to <i>%s</i>"
-msgstr "zkratka %s odkazuje na %s"
+msgstr "zkratka %s odkazuje na <i>%s</i>"
 
 #: ../IkiWiki/Plugin/smiley.pm:22
 msgid "failed to parse any smileys, disabling plugin"
