web commit by JoshTriplett: sign

--- a/doc/bugs/ikiwiki__39__s_ViewVC_down.mdwn
+++ b/doc/bugs/ikiwiki__39__s_ViewVC_down.mdwn
@@ -1,1 +1,1 @@
-ikiwiki's ViewVC, linked on the download page and used for RecentChanges and History, appears down.
+ikiwiki's ViewVC, linked on the download page and used for RecentChanges and History, appears down.  --[[JoshTTriplett]]
