--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -9,7 +9,7 @@ Ikiwiki requires the [[cpan Text::Markdown]], [[cpan URI]],
 [[cpan HTML::Parser]], and [[cpan HTML::Template]] perl modules be
 installed, and also uses the following perl modules if available: 
 [[cpan CGI::Session]], [[cpan CGI::FormBuilder]] (version 3.02.02 or newer),
-[[cpan Mail::Sendmail]], [[cpan Time::Duration]], [[cpan TimeDate]],
+[[cpan Mail::Sendmail]], [[cpan Time::Duration]], [[cpan DateTime]],
 [[cpan HTML::Scrubber]], [[cpan RPC::XML]], [[cpan XML::Simple]],
 [[cpan XML::Feed]], [[cpan File::MimeInfo]], [[cpan Locale::gettext]]
 (version 1.04 or newer).
