* New domain name for ikiwiki: ikiwiki.info. Update your links.

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Use ./Makefile.PL to generate a Makefile, "make" will build the
 documentation wiki and a man page, and "make install" will install ikiwiki.
 
 All other documentation is in the ikiwiki documentation wiki, which is also
-available online at <http://ikiwiki.kitenet.net/>
+available online at <http://ikiwiki.info/>
