--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -8,7 +8,7 @@ for all OpenIDs is a good idea. What's your opinion?
 > It's probably ok to do this, although there's the potential it might
 > misfire on some url. I've implemented it on a trial basis. [[bugs/done]] --[[Joey]]
 
->> Thanks! What version of ikiwiki do you use at ikiwiki.kitenet.net
+>> Thanks! What version of ikiwiki do you use at ikiwiki.info
 >> site? I still can see my "getopenid.com/ptecza" OpenID at
 >> RecentChanges page there... --Pawel
 
