--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -27,10 +27,10 @@ Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
 ## subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
-`svn://ikiwiki.kitenet.net/ikiwiki/trunk`
+`svn://ikiwiki.info/ikiwiki/trunk`
 
 The source in subversion can be browsed
-[here](http://ikiwiki.kitenet.net/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki).
+[here](http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki).
 
 Commits to ikiwiki's source code are now fed into
 [CIA](http://cia.navi.cx/), and can be browsed, subscribed to etc on its
@@ -40,7 +40,7 @@ to the documentation wiki are currently excluded.
 ## git
 
 A git mirror of the trunk of the subversion repository is available at
-<http://ikiwiki.kitenet.net/ikiwiki.git/.git>. It is updated whenever
+<http://ikiwiki.info/ikiwiki.git/.git>. It is updated whenever
 changes are committed to the subversion repository.
 
 ## arch
