--- a/doc/ikiwiki-mass-rebuild.mdwn
+++ b/doc/ikiwiki-mass-rebuild.mdwn
@@ -25,6 +25,6 @@ All options are passed on to ikiwiki.
 
 # AUTHOR
 
-Joey Hess <joey@kitenet.net>
+Joey Hess <joey@ikiwiki.info>
 
 Warning: this page is automatically made into ikiwiki-mass-rebuild's man page, edit with care
