--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,6 +1,6 @@
 Sites that are using ikiwiki include:
 
-* [This wiki](http://ikiwiki.kitenet.net) (of course!)
+* [This wiki](http://ikiwiki.info) (of course!)
 * [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
 * [Kyle's MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki) and [Livingstone and MacLea Emigration Registry](http://kitenet.net/~kyle/family/registry)
 * [Ulrik's small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
