--- a/doc/plugins/contrib/linguas.mdwn
+++ b/doc/plugins/contrib/linguas.mdwn
@@ -3,7 +3,7 @@
 Linguas
 =======
 
-Linguas is a plugin for [ikiwiki](http://ikiwiki.kitenet.net/) that
+Linguas is a plugin for [ikiwiki](http://ikiwiki.info/) that
 allows translations of wiki pages.
 
 Download: [linguas.pm](http://wiki.ettin.org/files/linguas.pm) (2006-08-21).
