--- a/doc/plugins/contrib/navbar.mdwn
+++ b/doc/plugins/contrib/navbar.mdwn
@@ -1,7 +1,7 @@
 [[template id=plugin name=navbar author="[[TobiOetiker]]"]]
 
 The Navbar Plugin renders a Navigation Bar into your page. It is based on code
-from the sidebar plug in see <http://ikiwiki.kitenet.net/plugins/sidebar.html>
+from the sidebar plug in see <http://ikiwiki.info/plugins/sidebar.html>
 for details.
 
 The plug in looks for a page called "navbar" 
