--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -265,6 +265,6 @@ configuration options of their own.
 
 # AUTHOR
 
-Joey Hess <joey@kitenet.net>
+Joey Hess <joey@ikiwiki.info>
 
-Warning: this page is automatically made into ikiwiki's man page via [mdwn2man](http://ikiwiki.kitenet.net/cgi-bin/viewvc.cgi/trunk/mdwn2man?root=ikiwiki&view=markup).  Edit with care
+Warning: this page is automatically made into ikiwiki's man page via [mdwn2man](http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/mdwn2man?root=ikiwiki&view=markup).  Edit with care
