--- a/basewiki/index.mdwn
+++ b/basewiki/index.mdwn
@@ -4,4 +4,4 @@ All wikis are supposed to have a [[SandBox]], so this one does too.
 
 ----
 
-This wiki is powered by [ikiwiki](http://ikiwiki.kitenet.net).
+This wiki is powered by [ikiwiki](http://ikiwiki.info).
