--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,9 @@ ikiwiki (1.43) UNRELEASED; urgency=low
     of perl are vulnerable and it is not known to really be exploitable from
     ikiwiki.
   * Add explicit module prereqs to Makefile.PL
+  * New domain name for ikiwiki: ikiwiki.info. Update your links.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 18 Feb 2007 12:58:18 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Feb 2007 15:12:01 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
