--- a/doc/helponformatting.mdwn
+++ b/doc/helponformatting.mdwn
@@ -65,8 +65,9 @@ To write a code block, indent each line with a tab or 4 spaces:
 To link to another page on the wiki, place the page's name inside double
 square brackets, so you would use `\[[WikiLink]]` to link to [[WikiLink]].
 
-To link to any other web page, or to an email address, you can just put the url in angle brackets: <<http://ikiwiki.kitenet.net>>, or you can use the form
-\[link text\]\(url\)
+To link to any other web page, or to an email address, you can just put the
+url in angle brackets: <<http://ikiwiki.info>>, or you can use the
+form \[link text\]\(url\)
 
 ----
 
