--- a/doc/news/openid.mdwn
+++ b/doc/news/openid.mdwn
@@ -3,7 +3,7 @@ decentralized authentication mechanism that allows you to have one login
 that you can use on a growing number of websites.
 
 Traditional password-based logins are still supported, but I'm considering
-switching at least ikiwiki.kitenet.net over to using only OpenID logins. 
+switching at least ikiwiki.info over to using only OpenID logins. 
 That would mean blowing away all the currently registered users and
 their preferences. If you're active on this wiki, I suggest you log out and
 log back in, try out the OpenID signup process if you don't already have an
