--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -34,7 +34,7 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
 	   		All wikis are supposed to have a [[SandBox]],
 	   		so this one does too.
 	   		----
-	   		This wiki is powered by [ikiwiki](http://ikiwiki.kitenet.net).
+	   		This wiki is powered by [ikiwiki](http://ikiwiki.info).
    """]]
    
    See [[HelpOnFormatting]] for details about the markup language.
