web commit by http://formorer.myopenid.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -36,6 +36,7 @@ Sites that are using ikiwiki include:
 * [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
 * [Ronan Le Hy's blog](http://bayesien.org), in French.
 * <http://iainmclaren.com>.
+* [formorers blog and website](http://www.formorer.de/webwiki/) 
 
 Please feel free to add your own ikiwiki site!
 
