--- a/doc/ikiwikiusers/discussion.mdwn
+++ b/doc/ikiwikiusers/discussion.mdwn
@@ -7,3 +7,5 @@ ikiwiki), while project sites primarily contribute based on their own
 notability (UK Software Patents Info uses ikiwiki; the ion site uses ikiwiki).
 Burying the project sites in with the rest tends to make people less likely to
 notice them and remark on their notability.  --[[JoshTriplett]]
+
+Great idea. --[[Joey]]
