add ikiwiki links to example pages

--- a/doc/examples/blog/index.mdwn
+++ b/doc/examples/blog/index.mdwn
@@ -8,3 +8,7 @@ available.
 
 [[inline pages="./posts/* and !*/Discussion" show="10"
 actions=yes rootpage="./posts"]]
+
+----
+
+This wiki is powered by [ikiwiki](http://ikiwiki.info).
