--- a/doc/examples/softwaresite/index.mdwn
+++ b/doc/examples/softwaresite/index.mdwn
@@ -5,3 +5,8 @@ your example program needs. This is its wiki.
 * [[news]]
 * [[documentation|doc]]
 * [[contact]]
+
+----
+
+This wiki is powered by [ikiwiki](http://ikiwiki.info).
+
