--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.43) UNRELEASED; urgency=low
+ikiwiki (1.43) unstable; urgency=low
 
   * Allow plugins to add new types of tests that can be used in PageSpecs.
   * Add a "conditional" plugin, which allows displaying text if a condition
@@ -32,7 +32,7 @@ ikiwiki (1.43) UNRELEASED; urgency=low
   * Add explicit module prereqs to Makefile.PL
   * New domain name for ikiwiki: ikiwiki.info. Update your links.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 18 Feb 2007 15:12:01 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Feb 2007 23:26:32 -0500
 
 ikiwiki (1.42) unstable; urgency=low
 
