* Patch to fix validaton of atom feeds by fixing the category tags.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.44) UNRELEASED; urgency=low
+
+  * Patch to fix validaton of atom feeds by fixing the category tags.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 18 Feb 2007 23:40:32 -0500
+
 ikiwiki (1.43) unstable; urgency=low
 
   * Allow plugins to add new types of tests that can be used in PageSpecs.
