--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,37 +1,42 @@
-Sites that are using ikiwiki include:
+Projects
+========
 
 * [This wiki](http://ikiwiki.info) (of course!)
+* [Perl Mongers México](http://www.pm.org.mx/)
+* [UK Software Patents info page](http://www.softwarepatents.co.uk/)
+* [Planet Debian upstream](http://updo.debian.net/)
+* The [ion window manager homepage](http://modeemi.fi/~tuomov/ion/)
+* [Debian Mentors wiki](http://jameswestby.net/mentors/)
+* [LinuxWorld.com's monkey.linuxworld.com contributor wiki](https://monkey.linuxworld.com/) ([[Git]] backend)
+* The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
+* [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
+
+Personal sites and blogs
+========================
+
 * [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
 * [Kyle's MacLea Genealogy wiki](http://kitenet.net/~kyle/family/wiki) and [Livingstone and MacLea Emigration Registry](http://kitenet.net/~kyle/family/registry)
 * [Ulrik's small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
 * [kite](http://kitenet.net)
-* [Perl Mongers México](http://www.pm.org.mx/)
-* [UK Software Patents info page](http://www.softwarepatents.co.uk/)
 * [Paul Collins's as-yet purposeless wiki](http://wiki.ondioline.org/)
 * [Andre Luis Lopes's personal website](http://www.andrelop.org/). Brazilian Portuguese only
 * [Alessandro Dotti Contra's personal website](http://www.dotticontra.org/) and [weblog](http://www.dotticontra.org/blog)
 * [Kelly Clowers' personal website](http://www.clowersnet.net/)
 * [Anna's nature features](http://kitenet.net/~anna/nature-feature/)
-* [Planet Debian upstream](http://updo.debian.net/)
 * [Roland Mas's blog](http://roland.entierement.nu/categories/geek-en.html)
 * [Sergio Talens-Oliag's personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * [Christian Aichinger's homepage](http://greek0.net/)
-* The [ion window manager homepage](http://modeemi.fi/~tuomov/ion/)
 * [Ben A'Lee's homepage](http://bmalee.eu/~bma/)
 * [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
-* [Debian Mentors wiki](http://jameswestby.net/mentors/)
-* [LinuxWorld.com's monkey.linuxworld.com contributor wiki](https://monkey.linuxworld.com/) ([[Git]] backend)
 * [Stefano Zacchiroli's blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones: Victor Moral's personal website in Spanish](http://taquiones.net)
     * [Venexma Europa, S.L.](http://www.venexma.net): It's a small company dedicated to the distribution of shoe accessories. We use ikiwiki for development of internal applications (some areas are password protected). In spanish, of course.
 * [betacantrips, the personal website of Ethan Glasser-Camp](http://www.betacantrips.com/)
 * [Keith Packard's homepage and blog](http://keithp.com/).
 * [Christian Mock's homepage](http://www.tahina.priv.at/).
-* The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [Choffee](http://choffee.co.uk/).
 * [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
-* [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * [Proper Treatment 正當作法](http://conway.rutgers.edu/~ccshan/wiki/)
 * [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
 * [Ronan Le Hy's blog](http://bayesien.org), in French.
