--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -1,3 +1,5 @@
 I edited some pages on the ikiwiki ikiwiki ([[/shortcuts]] and
 [[/ikiwikiusers]]).  The edits show up in RecentChanges and History, but not
 in the compiled pages.  --[[JoshTriplett]]
+
+Well, I seem to have fixed this now (crossed fingers) [[bugs/done]] --[[Joey]]
