web commit by JoshTriplett: Looks fixed.  Out of curiosity, what caused the problem?

--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -3,3 +3,5 @@ I edited some pages on the ikiwiki ikiwiki ([[/shortcuts]] and
 in the compiled pages.  --[[JoshTriplett]]
 
 Well, I seem to have fixed this now (crossed fingers) [[bugs/done]] --[[Joey]]
+
+Looks fixed.  Out of curiosity, what caused the problem? --[[JoshTriplett]]
