--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -5,3 +5,7 @@ in the compiled pages.  --[[JoshTriplett]]
 Well, I seem to have fixed this now (crossed fingers) [[bugs/done]] --[[Joey]]
 
 Looks fixed.  Out of curiosity, what caused the problem? --[[JoshTriplett]]
+
+Looks like a build died halfway through, so it was stumbling over rendered
+html pages that it didn't have record of. I don't know what build failed
+exactly. --[[Joey]]
