tag some potential candidates for the Google Summer of Code

--- a/doc/todo/BTS_integration.mdwn
+++ b/doc/todo/BTS_integration.mdwn
@@ -3,3 +3,5 @@ Given network access when building the wiki, ikiwiki could retrieve information 
 This seems somewhat difficult, as ikiwiki would need to maintain a cache of the remote BTS information, and know how to talk to various types of BTS.  CPAN modules exist to solve this problem for some types of BTS.
 
 --[[JoshTriplett]]
+
+[[tag soc]]
