--- a/doc/todo/BibTeX.mdwn
+++ b/doc/todo/BibTeX.mdwn
@@ -1,3 +1,5 @@
 I would *love* to see a plugin that lets you create one or more BibTeX-formatted bibliography pages and add citations to other pages.  The plugin could also render the bibliographies themselves using a chosen BibTeX style and an HTML formatter for LaTeX (such as HeVeA).
 
 --[[JoshTriplett]]
+
+[[tag soc]]
