--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -3,3 +3,5 @@ How about a plugin adding a
 as a PNG via [[debpkg dvipng]] and include the resulting image in the page?
 Useful for mathematics, as well as for stuff like the LaTeX version of the
 ikiwiki [[/logo]].
+
+[[soc]]
