--- a/doc/todo/wikiwyg.mdwn
+++ b/doc/todo/wikiwyg.mdwn
@@ -21,3 +21,5 @@ wiki markup, which is not always the case in ikiwiki. Unless there's some
 other way to feed it the actual source for a page, this seems like a
 problem. According to the developers, it is possible to do that, and start
 off in WikiText mode.
+
+[[soc]]
