--- a/doc/todo/Moving_Pages.mdwn
+++ b/doc/todo/Moving_Pages.mdwn
@@ -23,3 +23,5 @@ I see the need for:
   * optionally rewrite incoming links to the new location
 
 Brad
+
+Note that there is a partial implementation in the [[patchqueoe|patchqueue/move_page]].
