--- a/doc/todo/Support_XML-RPC-based_blogging.mdwn
+++ b/doc/todo/Support_XML-RPC-based_blogging.mdwn
@@ -5,3 +5,5 @@ one standard URL with page names as blog names would work.
 
 > This would be a great thing to add a plugin for. (Probably using the cgi
 > hook to let ikiwiki act as an RPC server. --[[Joey]]
+
+[[soc]]
