--- a/doc/todo/graphviz.mdwn
+++ b/doc/todo/graphviz.mdwn
@@ -1,3 +1,8 @@
 How about a plugin providing a [[preprocessor_directive|preprocessordirective]] to render a [[debpkg graphviz]] file as an image via one of the graphviz programs ("dot" by default) and include the resulting image on the page, using the "cmapx" image map format?  graphviz files themselves could also render the same way into an HTML file with the same basename as the graphviz file; format and program could come either from an ikiwiki configuration option or comments/directives in the file.  (For example, "digraph" could imply "dot", and "graph" could imply "neato".)
 
 To complement this, ikiwiki could support creating and editing graphviz files through the CGI interface, as a new page type; preview could render the file.  It would also help to have some sort of graphviz extension attribute for linking to a wiki page, which would become a standard href or URL attribute in the input passed to the particular graphviz program.
+
+> Editing graphviz files safely online might be tricky. Graphvis would need
+> to be audited. --[[Joey]]
+
+[[soc]]
