--- a/doc/todo/graphviz.mdwn
+++ b/doc/todo/graphviz.mdwn
@@ -5,4 +5,4 @@ To complement this, ikiwiki could support creating and editing graphviz files th
 > Editing graphviz files safely online might be tricky. Graphvis would need
 > to be audited. --[[Joey]]
 
-[[soc]]
+[[tag soc]]
