--- a/doc/todo/wikiwyg.mdwn
+++ b/doc/todo/wikiwyg.mdwn
@@ -22,4 +22,4 @@ other way to feed it the actual source for a page, this seems like a
 problem. According to the developers, it is possible to do that, and start
 off in WikiText mode.
 
-[[soc]]
+[[tag soc]]
