--- a/doc/todo/discussion_page_as_blog.mdwn
+++ b/doc/todo/discussion_page_as_blog.mdwn
@@ -26,4 +26,4 @@ issue above. Worrying about threading may be overkill.
 
 I don't think that the nesting is very clear, I found it confusing..
 
-[[soc]]
+[[tag soc]]
