web commit by http://id.inelegant.org/

--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -9,3 +9,5 @@ Looks fixed.  Out of curiosity, what caused the problem? --[[JoshTriplett]]
 Looks like a build died halfway through, so it was stumbling over rendered
 html pages that it didn't have record of. I don't know what build failed
 exactly. --[[Joey]]
+
+>> Has this just happened again? [[patchqueue/datearchives-plugin]] is now exhibiting the same symptoms -- it's in the repository and RecentChanges, but the actual page is 404. --Ben
