--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -2,7 +2,7 @@ I edited some pages on the ikiwiki ikiwiki ([[/shortcuts]] and
 [[/ikiwikiusers]]).  The edits show up in RecentChanges and History, but not
 in the compiled pages.  --[[JoshTriplett]]
 
-Well, I seem to have fixed this now (crossed fingers) [[bugs/done]] --[[Joey]]
+Well, I seem to have fixed this now (crossed fingers) --[[Joey]]
 
 Looks fixed.  Out of curiosity, what caused the problem? --[[JoshTriplett]]
 
@@ -11,3 +11,7 @@ html pages that it didn't have record of. I don't know what build failed
 exactly. --[[Joey]]
 
 >> Has this just happened again? [[patchqueue/datearchives-plugin]] is now exhibiting the same symptoms -- it's in the repository and RecentChanges, but the actual page is 404. --Ben
+
+>>> Yes, it seems to have happened again. Added debugging to track it
+>>> down next time it occurs. It seems to be happening when you add things
+>>> to patchqueue. --[[Joey]]
