--- a/doc/bugs/xgettext_issue.mdwn
+++ b/doc/bugs/xgettext_issue.mdwn
@@ -36,3 +36,8 @@ to make and make test just fine. --HarleyPig
 >>>> FWIW, I get the same error when building manually from SVN trunk on Ubuntu Edgy. I'm also using xgettext 0.15, because it's the latest version that's in the repos. However,
 >>>> I don't think that's the sole problem because I can build fine on another (Debian) box which is running _0.14.4_... I know very little about `gettext`, but could this be
 >>>> related to my language settings? On the Edgy box I have `LANGUAGE=en_GB:en` and `LANG=en_GB.UTF-8`. The `ikiwiki` package installs on Edgy with no problems. --Ben
+
+>>>>> You'll only see the problem if it needs to rebuild po/ikiwiki.pot,
+>>>>> which it generally doesn't if you're just building the package. If
+>>>>> you edit files and build, it will rebuilt the pot and then fail with
+>>>>> older gettexts. --[[Joey]]
